--- a/CODEXUpdater/frm_Updater.resx
+++ b/CODEXUpdater/frm_Updater.resx
@@ -1979,4 +1979,7 @@
   <metadata name="drag_pnl.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>121, 16</value>
   </metadata>
+  <metadata name="timer_update.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>220, 16</value>
+  </metadata>
 </root>
